--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.0.9",
     "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0"
   }
 }
