--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.0.9",
+    "clipboard": "^2.0.11",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
